# 2gis-test

./: 2gis-test.cpp  2gis-test.h  CMakeLists.txt  README.md  main.cpp  main.qml
example/: sudnii_den_.txt
models/: facade.cpp  facade.h  primarymodel.cpp  primarymodel.h  primarymodeldetail.h  proxymodel.cpp  proxymodel.h  word.cpp  word.h
